--- a/style.scss
+++ b/style.scss
@@ -1,21 +1,21 @@
-$withDuck: 65px;
+$widthDuck: 65px;
 $countDuck: 5;
 
 @for $i from 1 through $countDuck {
     @keyframes duck-fly-#{$i} {
         0% {
-            left: -$withDuck;
-            top: random(90) + vh;
+            left: -$widthDuck;
+            top: random(70) + vh;
         }
 
         50% {
             left: random(60) + vw;
-            top: random(90) + vh;
+            top: random(70) + vh;
         }
 
         100% {
             left: 100vw;
-            top: random(90) + vh;
+            top: random(70) + vh;
         }
     }
 }
@@ -27,6 +27,7 @@ $countDuck: 5;
     background-image: url(bg.png);
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     position: relative;
 }
 
@@ -47,6 +48,10 @@ $countDuck: 5;
     position: absolute;
     top: 5%;
     left: 50%;
+    font-size: 72px;
+    background: -webkit-linear-gradient(#43dde5, #f0f0f0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     &::before {
         content: counter(count);
     }
